Do not use the "thd" pointer to identify a thread in the embedded lib, but rather use the "thread_id" counter.

Fixes bug#27078:
Compile error: lib_sql.cc cast from 'THD*' to 'pthread_t' loses precision